# frugal-api-economy

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  frugal_api_economy_environment.py  requirements.txt
server/static/: dashboard.css  dashboard.html  dashboard.js
