[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-frugal_api_economy"
version = "0.1.0"
description = "Frugal Api Economy environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "frugal_api_economy.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["frugal_api_economy", "frugal_api_economy.server"]
package-dir = { "frugal_api_economy" = ".", "frugal_api_economy.server" = "server" }
